(lang dune 3.18)

(name challenge-api)

(generate_opam_files true)

(source
 (github heathhenley/challenges))

(authors "Heath Henley <heath.j.henley@gmail.com>")

(maintainers "Heath Henley <heath.j.henley@gmail.com>")

(license LICENSE)

(package
 (name challenge-api)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))
